--- a/index.html
+++ b/index.html
@@ -1,1 +1,89 @@
-My page
+<!DOCTYPE html>
+<html>
+<head>
+	<title> NUSProgressBar - A Module Planning Tool </title>
+	<link rel="stylesheet" href="styles/main.css">
+<!-- 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/tether/1.3.1/js/tether.min.js" />
+ -->	<!--Bootstrap 4 -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> 
+</head>
+<body>
+	<a data-target="#myModal" role="button" class="btn" data-toggle="modal">Choose your programme</a>
+	<div class="modal fade hide" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	  <div class="modal-header">
+	    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+	    <h3 id="selector-head">Programme selector</h3>
+	  </div>
+	  <div class="modal-body">NIL
+	       <select id="programme-choice">
+	          <option value="NIL">Applied Mathematics with no specialisation</option>
+	          <option value="Mathematical Modelling and Data Analytics">Applied Mahtematics (Mathematical Modelling and Data Analytics)</option>
+	          <option value="Operations Research and Financial Mathematics">Applied Mahtematics (Operations Research and Financial Mathematics)</option>
+	      </select>
+	  </div>
+	  <div class="modal-footer">
+	    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+	    <button class="btn btn-primary" id="save-programme">Save changes</button>
+	  </div>
+	</div>
+
+	<!-- main container -->
+	<div class="container-fuild">
+		<div class="row">
+			
+			<div class="col-md-3">
+				<div class="logo">
+					<img src="./images/logo2.png" id="logo-image">
+				</div>
+				<div id="module-info">
+					<h2 class="remove-me"> Here is the module information. </h2>
+				</div>
+			</div>
+			<div class="col-md-9">
+				<div id="primary-plan">
+					<div id="progress-bar">
+						<h2 class="remove-me-progress-bar"> Here is the progress bar. </h2>
+					</div>
+					<div id="button-area">
+						<a class="btn" id="programme-selecter" data-popup-open="popup-programme" href="#">choose programme</a>
+						<div class="popup" data-popup="popup-programme">
+						    <div class="popup-inner" id="programme-selector-area">
+						    	<h5>Choose your faculty</h5>
+						        <select id="faculty-choice"></select>
+						        <h5>Choose your department</h5>
+						        <select id="department-choice"></select>
+						        <h5>Choose your programme</h5>
+						        <select id="programme-choice"></select>
+						        <h5>Choose your specialisationg</h5>
+						        <select id="specialisation-choice"></select>
+						        <button class="btn hide-programme" data-dismiss="modal" aria-hidden="true">Close</button>
+	    						<button class="btn btn-primary" id="save-programme">Save changes</button>
+						        <a class="popup-close hide-programme" id="hide-programme-button" data-popup-close="popup-programme" href="#">x</a>
+						    </div>
+						</div>
+					</div>
+					<div id="message-area">
+						<h6> Here is the message area. (coming soon...) </h6>
+					</div>
+					<div id="module-table">
+						<h2 class="remove-me-module-table">  Here is the module table. </h2>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div> 
+	<!-- end main container -->
+
+	<!-- jquery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
+
+	<!-- typeahead -->
+	<script src="libs/typeahead.bundle.js"></script>
+
+	<!-- main js -->
+	<script src="bundle.js" type="text/javascript"></script>
+</body>
+</html>
